<resources>
    <string name="app_name">杜比大喇叭β版</string>

    <string name="xposed_description">仅供测试</string>
    <string name="Module_is_Not_Active">模块未激活</string>

    <string name="pref_base_setting">基本设置</string>
    <string name="pref_proxy_setting">代理设置</string>
    <string name="pref_optional_setting">可选设置</string>
    <string name="pref_beautify">美化设置</string>
    <string name="pref_other">其他</string>

    <string name="warning_key">warning</string>
    <string name="warning_summary">欢迎使用杜比大喇叭，本模块仅供学习交流使用且公开免费，严禁用于商业用途！</string>

    <string name="unblock_key">unblock</string>
    <string name="unblock_default_value">true</string>
    <string name="unblock_title">开关</string>

    <string name="dex_key" translatable="false">dex</string>
    <string name="dex_default_value">true</string>
    <string name="dex_title">启用DEX缓存</string>
    <string name="dex_summary">加快启动速度，但同版本号的内测版与稳定版互装可能会有兼容性问题</string>

    <string name="black_key" translatable="false">black</string>
    <string name="black_default_value">true</string>
    <string name="black_title">本地黑胶</string>
    <string name="black_summary">去广告、鲸云音效、个性换肤等，启动图片与背景图片为服务器云同步所以设置不可用</string>

    <string name="proxy_key" translatable="false">proxy</string>
    <string name="proxy_default_value">false</string>
    <string name="proxy_title">启用UnblockNeteaseMusic代理</string>
    <string name="proxy_summary">原理为使用其他音源（如：酷我）来替换无版权歌曲，偶发歌曲匹配错误无法避免，请勿因此提交issue</string>

    <string name="force_key" translatable="false">force</string>
    <string name="force_default_value">false</string>
    <string name="force_title">强制替换音源</string>
    <string name="force_summary">即使网易云有版权，也尝试从其他音源中获取更高音质，会增大匹配错误概率</string>

    <string name="quality_key" translatable="false">quality</string>
    <string name="quality_default_value">false</string>
    <string name="quality_title">优先获取无损音质</string>
    <string name="quality_summary">仅能从酷我音源获取无损音质</string>

    <string name="white_key" translatable="false">white</string>
    <string name="white_default_value">true</string>
    <string name="white_title">白名单模式</string>
    <string name="white_summary">白名单：仅对播放及下载api进行代理，其他功能（不变灰等）由杜比大喇叭完成\n~建议仅在白名单模式无效时关闭选项~</string>

    <string name="script_key" translatable="false">script</string>
    <string name="script_title">脚本ZIP压缩包路径</string>

    <string name="node_key" translatable="false">node</string>
    <string name="node_title">node文件路径</string>

    <string name="script_github_key" translatable="false">script_github</string>
    <string name="script_github_title">访问UnblockNeteaseMusic github</string>

    <string name="node_github_key" translatable="false">node_github</string>
    <string name="node_github_title">访问node github</string>

    <string name="remove_update_key" translatable="false">remove_update</string>
    <string name="remove_update_default_value">true</string>
    <string name="remove_update_title">去升级</string>

    <string name="auto_sign_key" translatable="false">auto_sign</string>
    <string name="auto_sign_default_value">true</string>
    <string name="auto_sign_title">自动签到</string>

    <string name="hide_module_icon_key" translatable="false">hide_module_icon</string>
    <string name="hide_module_default_value">false</string>
    <string name="hide_module_icon_title">隐藏本模块图标</string>

    <string name="gray_key" translatable="false">gray</string>
    <string name="gray_default_value">false</string>
    <string name="gray_title">不变灰</string>
    <string name="gray_summary">只影响显示效果，与能否播放无关，请配合音质解锁模块使用，否则无音源歌曲将无法播放且无法自动跳过。</string>

    <string name="sign_song_key" translatable="false">sign_song</string>
    <string name="sign_song_default_value">false</string>
    <string name="sign_song_title">歌曲打卡</string>
    <string name="sign_song_summary">获取每日推荐歌单中的歌曲进行打卡，每日最多记录300首，打卡效果有一定延时不要重复打卡，会影响年度听歌总结且有可能会导致几天内签到天数不变，介意者慎用</string>

    <string name="self_sign_key" translatable="false">self_sign</string>
    <string name="self_sign_title">自助打卡</string>

    <string name="internal_key" translatable="false">internal</string>
    <string name="internal_default_value">false</string>
    <string name="internal_title">阻止内测到期提示</string>
    <string name="internal_summary">可以无限制的使用内测版，但因内测版产生的任何问题不负责解决</string>

    <string name="oversea_key" translatable="false">oversea</string>
    <string name="oversea_default_value">false</string>
    <string name="oversea_title">海外模式</string>
    <string name="oversea_summary">国内用户勾选后会降低缓冲速度</string>

    <string name="magisk_key" translatable="false">magisk</string>
    <string name="magisk_default_value">false</string>
    <string name="magisk_title">修复Magisk冲突</string>
    <string name="magisk_summary">如果遇到本地歌曲不能扫描，勾选该选项</string>

    <string name="hide_tab_key" translatable="false">hide_tab</string>
    <string name="hide_tab_default_value">false</string>
    <string name="hide_tab_title">精简Tab（6.0.0~7.3.0）</string>
    <string name="hide_tab_summary">首页顶部仅保留“我的”与“发现”</string>

    <string name="hide_banner_key" translatable="false">hide_banner</string>
    <string name="hide_banner_default_value">false</string>
    <string name="hide_banner_title">移除发现页Banner</string>

    <string name="hide_playlist_banner_key" translatable="false">hide_playlist_banner</string>
    <string name="hide_playlist_banner_default_value">false</string>
    <string name="hide_playlist_banner_title">移除歌单广场Banner</string>

    <string name="hide_bubble_key" translatable="false">hide_bubble</string>
    <string name="hide_bubble_default_value">false</string>
    <string name="hide_bubble_title">移除小红点</string>

    <string name="comment_hot_key" translatable="false">comment_hot</string>
    <string name="comment_hot_default_value">false</string>
    <string name="comment_hot_title">评论区优先显示“最热”内容</string>

    <string name="hide_sidebar_key" translatable="false">hide_sidebar</string>
    <string name="hide_sidebar_default_value">false</string>
    <string name="hide_sidebar_title">精简侧边栏</string>
    <string name="hide_sidebar_summary">部分Item需配合“设置”->“侧边栏管理”开关生效，仅支持8.X以下的版本</string>

    <string name="profile_key" translatable="false">profile</string>
    <string name="profile_title">设置个人信息</string>
    <string name="profile_summary">暂无</string>

    <string name="core_ver_key" translatable="false">core_ver</string>
    <string name="core_ver_title">模块版本</string>
    <string name="core_ver_summary">ver.</string>

    <string name="compatible_appver_key" translatable="false">compatible_appver</string>
    <string name="compatible_appver_title">兼容版本</string>
    <string name="compatible_appver_summary">4.3.1，6.0.0，6.4.3~8.1.60</string>

    <string name="github_key" translatable="false">github</string>
    <string name="github_title">github源码</string>
    <string name="github_summary">请务必帮我点一下小星星！</string>

    <string-array name="package_scope">
        <item>com.netease.cloudmusic</item>
    </string-array>
</resources>
