<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="@string/warning_key"
        android:summary="@string/warning_summary" />

    <PreferenceCategory android:title="@string/pref_base_setting">
        <CheckBoxPreference
            android:defaultValue="@string/unblock_default_value"
            android:key="@string/unblock_key"
            android:title="@string/unblock_title" />

        <CheckBoxPreference
            android:defaultValue="@string/dex_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/dex_key"
            android:summary="@string/dex_summary"
            android:title="@string/dex_title" />

        <CheckBoxPreference
            android:defaultValue="@string/black_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/black_key"
            android:summary="@string/black_summary"
            android:title="@string/black_title" />

        <CheckBoxPreference
            android:defaultValue="@string/remove_update_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/remove_update_key"
            android:title="@string/remove_update_title" />

        <CheckBoxPreference
            android:defaultValue="@string/auto_sign_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/auto_sign_key"
            android:title="@string/auto_sign_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_proxy_setting">
        <CheckBoxPreference
            android:defaultValue="@string/proxy_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/proxy_key"
            android:summary="@string/proxy_summary"
            android:title="@string/proxy_title" />

        <CheckBoxPreference
            android:defaultValue="@string/force_default_value"
            android:dependency="@string/proxy_key"
            android:key="@string/force_key"
            android:summary="@string/force_summary"
            android:title="@string/force_title" />

        <CheckBoxPreference
            android:defaultValue="@string/quality_default_value"
            android:dependency="@string/proxy_key"
            android:key="@string/quality_key"
            android:summary="@string/quality_summary"
            android:title="@string/quality_title" />

        <CheckBoxPreference
            android:defaultValue="@string/white_default_value"
            android:dependency="@string/proxy_key"
            android:key="@string/white_key"
            android:summary="@string/white_summary"
            android:title="@string/white_title" />

        <Preference
            android:dependency="@string/proxy_key"
            android:key="@string/script_key"
            android:title="@string/script_title" />

        <Preference
            android:dependency="@string/proxy_key"
            android:key="@string/node_key"
            android:title="@string/node_title" />

        <Preference
            android:key="@string/script_github_key"
            android:title="@string/script_github_title" />

        <Preference
            android:key="@string/node_github_key"
            android:title="@string/node_github_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_optional_setting">
        <CheckBoxPreference
            android:defaultValue="@string/hide_module_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/hide_module_icon_key"
            android:title="@string/hide_module_icon_title" />

        <CheckBoxPreference
            android:defaultValue="@string/gray_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/gray_key"
            android:summary="@string/gray_summary"
            android:title="@string/gray_title" />

        <CheckBoxPreference
            android:defaultValue="@string/sign_song_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/sign_song_key"
            android:summary="@string/sign_song_summary"
            android:title="@string/sign_song_title" />

        <Preference
            android:dependency="@string/unblock_key"
            android:key="@string/self_sign_key"
            android:title="@string/self_sign_title" />

        <CheckBoxPreference
            android:defaultValue="@string/internal_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/internal_key"
            android:summary="@string/internal_summary"
            android:title="@string/internal_title" />

        <CheckBoxPreference
            android:defaultValue="@string/oversea_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/oversea_key"
            android:summary="@string/oversea_summary"
            android:title="@string/oversea_title" />

        <CheckBoxPreference
            android:defaultValue="@string/magisk_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/magisk_key"
            android:summary="@string/magisk_summary"
            android:title="@string/magisk_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_beautify">
        <CheckBoxPreference
            android:defaultValue="@string/hide_tab_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/hide_tab_key"
            android:summary="@string/hide_tab_summary"
            android:title="@string/hide_tab_title" />

        <CheckBoxPreference
            android:defaultValue="@string/hide_banner_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/hide_banner_key"
            android:title="@string/hide_banner_title" />

        <CheckBoxPreference
            android:defaultValue="@string/hide_playlist_banner_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/hide_playlist_banner_key"
            android:title="@string/hide_playlist_banner_title" />

        <CheckBoxPreference
            android:defaultValue="@string/hide_bubble_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/hide_bubble_key"
            android:title="@string/hide_bubble_title" />

        <CheckBoxPreference
            android:defaultValue="@string/comment_hot_default_value"
            android:dependency="@string/unblock_key"
            android:key="@string/comment_hot_key"
            android:title="@string/comment_hot_title" />

        <Preference
            android:dependency="@string/unblock_key"
            android:key="@string/hide_sidebar_key"
            android:persistent="false"
            android:summary="@string/hide_sidebar_summary"
            android:title="@string/hide_sidebar_title" />

        <Preference
            android:dependency="@string/unblock_key"
            android:key="@string/profile_key"
            android:persistent="false"
            android:summary="@string/profile_summary"
            android:title="@string/profile_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_other">
        <Preference
            android:key="@string/core_ver_key"
            android:persistent="false"
            android:summary="@string/core_ver_summary"
            android:title="@string/core_ver_title" />

        <Preference
            android:key="@string/compatible_appver_key"
            android:persistent="false"
            android:summary="@string/compatible_appver_summary"
            android:title="@string/compatible_appver_title" />

        <Preference
            android:key="@string/github_key"
            android:persistent="false"
            android:summary="@string/github_summary"
            android:title="@string/github_title" />
    </PreferenceCategory>
</PreferenceScreen>